--- a/requirements.txt
+++ b/requirements.txt
@@ -21,9 +21,6 @@ grpcio==1.34.0
 idna==2.10
 IProgress==0.4
 ipykernel==5.4.2
-ipython==7.19.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
 jedi==0.17.2
 Jinja2==2.11.2
 jsonschema==3.2.0
@@ -44,14 +41,14 @@ nest-asyncio==1.4.3
 notebook==6.1.5
 numpy==1.19.4
 oauthlib==3.1.0
-opencv-python==4.4.0.46
+# opencv-python==4.4.0.46
 packaging==20.8
 pandas==1.1.5
 pandocfilters==1.4.3
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==8.0.1
+# Pillow==8.0.1
 prometheus-client==0.9.0
 prompt-toolkit==3.0.8
 protobuf==3.14.0
@@ -68,18 +65,18 @@ pyzmq==20.0.0
 requests==2.25.0
 requests-oauthlib==1.3.0
 rsa==4.6
-scipy==1.5.4
+# scipy==1.5.4
 Send2Trash==1.5.0
 six==1.15.0
 tensorboard==2.4.0
 tensorboard-plugin-wit==1.7.0
 terminado==0.9.1
 testpath==0.4.4
-torch==1.7.1
-torchvision==0.8.2
+# torch==1.7.1
+# torchvision==0.8.2
 tornado==6.1
 tqdm==4.54.1
-traitlets==5.0.5
+# traitlets==5.0.5
 typing-extensions==3.7.4.3
 urllib3==1.26.2
 wcwidth==0.2.5
